CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (osswin)

SET ( CONFIG_SRC
    "${PROJECT_SOURCE_DIR}/osswin.h"
    "${CMAKE_BINARY_DIR}/config.h"
)
SOURCE_GROUP ( Config FILES ${CONFIG_SRC} )

SET ( GETOPT_SRCS
    ${PROJECT_SOURCE_DIR}/getopt.c
)
SOURCE_GROUP ( GetOpt FILES ${GETOPT_SRCS} )

SET ( DIRENT_SRCS
    ${PROJECT_SOURCE_DIR}/win32_dirent.cpp
    ${PROJECT_SOURCE_DIR}/win32_mkstemp.c
)
SOURCE_GROUP ( DirEnt FILES ${DIRENT_SRCS} )
INCLUDE_DIRECTORIES ( ${PROJECT_SOURCE_DIR} )

SET ( INET_SRCS
    ${PROJECT_SOURCE_DIR}/inet_aton.c
    ${PROJECT_SOURCE_DIR}/inet_v6defs.h
    ${PROJECT_SOURCE_DIR}/inet_pton.c
)
SOURCE_GROUP ( Network FILES ${INET_SRCS} )

SET ( ADD_ADDITIONAL_LIBRARIES "" )
IF ( WIN32 )
    SET ( ADD_ADDITIONAL_LIBRARIES "ws2_32" )
ENDIF ( WIN32 )

ADD_LIBRARY ( osswin ${LIB_TYPE} ${CONFIG_SRC} ${GETOPT_SRCS} ${INET_SRCS} ${DIRENT_SRCS} )
TARGET_LINK_LIBRARIES ( osswin ${ADD_ADDITIONAL_LIBRARIES} )

INSTALL ( TARGETS osswin 
            RUNTIME DESTINATION lib 
            LIBRARY DESTINATION lib 
            ARCHIVE DESTINATION lib/static
         )

INSTALL (DIRECTORY ${PROJECT_SOURCE_DIR}/ DESTINATION include/opensafety 
            FILES_MATCHING PATTERN "*.h" ) 