CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (ToolsUnitTests)

INCLUDE(AddTest)

SET ( COVERAGE_TOOLS CACHE INTERNAL "" FORCE )

INCLUDE_DIRECTORIES ( "${PROJECT_BINARY_DIR}" )

### TST oschecksum
ADD_SUBDIRECTORY ( oschecksum )

###TST pysodbuilder
IF ( BUILD_OPENSAFETY_PYTHON_TOOLS )
    ADD_SUBDIRECTORY ( pysodbuilder )
ENDIF()
